@@ -23,7 +23,6 @@ import org.apache.kafka.common.resource.ResourceType;
 import org.apache.kafka.common.security.auth.KafkaPrincipal;
 
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -54,17 +53,17 @@ public class AclEntry {
     public static Set<AclOperation> supportedOperations(ResourceType resourceType) {
         switch (resourceType) {
             case TOPIC:
-                return new HashSet<>(Arrays.asList(READ, WRITE, CREATE, DESCRIBE, DELETE, ALTER, DESCRIBE_CONFIGS, ALTER_CONFIGS));
+                return Set.of(READ, WRITE, CREATE, DESCRIBE, DELETE, ALTER, DESCRIBE_CONFIGS, ALTER_CONFIGS);
             case GROUP:
-                return new HashSet<>(Arrays.asList(READ, DESCRIBE, DELETE, DESCRIBE_CONFIGS, ALTER_CONFIGS));
+                return Set.of(READ, DESCRIBE, DELETE, DESCRIBE_CONFIGS, ALTER_CONFIGS);
             case CLUSTER:
-                return new HashSet<>(Arrays.asList(CREATE, CLUSTER_ACTION, DESCRIBE_CONFIGS, ALTER_CONFIGS, IDEMPOTENT_WRITE, ALTER, DESCRIBE));
+                return Set.of(CREATE, CLUSTER_ACTION, DESCRIBE_CONFIGS, ALTER_CONFIGS, IDEMPOTENT_WRITE, ALTER, DESCRIBE);
             case TRANSACTIONAL_ID:
-                return new HashSet<>(Arrays.asList(DESCRIBE, WRITE, TWO_PHASE_COMMIT));
+                return Set.of(DESCRIBE, WRITE, TWO_PHASE_COMMIT);
             case DELEGATION_TOKEN:
                 return Set.of(DESCRIBE);
             case USER:
-                return new HashSet<>(Arrays.asList(CREATE_TOKENS, DESCRIBE_TOKENS));
+                return Set.of(CREATE_TOKENS, DESCRIBE_TOKENS);
             default:
                 throw new IllegalArgumentException("Not a concrete resource type");
         }
